--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,13 @@
   <title>Expression Calculator</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png?v=YAo3rv7AX0">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png?v=YAo3rv7AX0">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png?v=YAo3rv7AX0">
+  <link rel="manifest" href="manifest.json?v=YAo3rv7AX0">
+  <link rel="mask-icon" href="safari-pinned-tab.svg?v=YAo3rv7AX0" color="#5bbad5">
+  <link rel="shortcut icon" href="favicon.ico?v=YAo3rv7AX0">
+  <meta name="theme-color" content="#ffffff">
 </head>
 <body>
   <app-root></app-root>
