Build date added

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Expression Calculator</title>
+  <title>ExprCalc</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png?v=YAo3rv7AX0">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png?v=YAo3rv7AX0">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png?v=YAo3rv7AX0">
