--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,10 @@
   <meta charset="utf-8">
   <title>ExprCalc</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1, maximum-scale=1">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png?v=YAo3rv7AX0">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png?v=YAo3rv7AX0">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png?v=YAo3rv7AX0">
