--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,13 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1, maximum-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png?v=YAo3rv7AX0">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png?v=YAo3rv7AX0">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png?v=YAo3rv7AX0">
-  <link rel="manifest" href="manifest.json?v=YAo3rv7AX0">
-  <link rel="mask-icon" href="safari-pinned-tab.svg?v=YAo3rv7AX0" color="#5bbad5">
-  <link rel="shortcut icon" href="favicon.ico?v=YAo3rv7AX0">
-  <meta name="theme-color" content="#ffffff">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=3">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=3">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=3">
+  <link rel="manifest" href="/manifest.json?v=3">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg?v=3" color="#5bbad5">
+  <link rel="shortcut icon" href="/favicon.ico?v=3">
+  <meta name="theme-color" content="#000000">
 </head>
 <body>
   <app-root></app-root>
